ReSharper.FSharp/test/data/parsing/errors/Type decl - Interface 01.fs
type T1() =
    interface

type T2() =
    interface I

let main _ =
    ()
    ()
